# how_rot_enc_viewer

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
hardware/: README.md  code.py
how_rot_enc_viewer/: config.py  config.py.example  data.py  main.py  main_window.py  util.py
tests/: test_how_rot_enc_viewer.py
